--- a/Hardware_Documentation/Arduino_Nano/EPD_4_01.md
+++ b/Hardware_Documentation/Arduino_Nano/EPD_4_01.md
@@ -8,3 +8,18 @@
 
 ### 4.2 EPD Back
 ![IMG_5788](https://github.com/JMozes16/ModCase/assets/85561037/4bc9e0af-2da2-4dbe-9a1b-626d0efb11be)
+
+### Connection (ePaper Driver HAT rev2.3 to Arduino NANO)
+
+Display Config: B  
+Interface Config: 0  
+
+PWR : D6  
+BUSY : D7  
+RST : D8  
+DC : D9  
+CS : D10  
+CLK : D13  
+DIN : D11  
+GND : GND  
+VCC : 3V3  
